- cleaned up index - inputs for expense / income

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,18 @@
-<p>This is the partial for view 1.</p>
+
+
+<div class="input-group input-group-lg">
+
+    <input type="text" class="form-control">
+    <span class="input-group-addon">€</span>
+    <div class="input-group-btn ">
+            <button type="button" class="btn btn-default"><span class="glyphicon glyphicon glyphicon-minus"></span></button>
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                <span class="caret"></span>
+                <span class="sr-only">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu" role="menu">
+                <li><a href="#"><span class="glyphicon glyphicon glyphicon-minus"></span> Ausgabe</a></li>
+                <li><a href="#"><span class="glyphicon glyphicon glyphicon-plus"></span> Einnahme</a></li>
+            </ul>
+    </div>
+</div>
