--- a/app/index.html
+++ b/app/index.html
@@ -31,13 +31,11 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Entenbudget</a>
+              <a class="navbar-brand">Monatsbudget</a>
           </div>
           <div class="menu collapse navbar-collapse">
               <ul class="nav navbar-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#/view1">About</a></li>
-                  <li><a href="#/view2">Contact</a></li>
+                  <li class="active"><a href="#/view1">Monatsbudget</a></li>
               </ul>
           </div><!--/.nav-collapse -->
       </div>
@@ -46,10 +44,7 @@
   <div class="container">
 
       <div class="starter-template">
-          <h1>Bootstrap starter template</h1>
           <div ng-view></div>
-          <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-          <div>Angular seed app: v<span app-version></span></div>
       </div>
 
   </div><!-- /.container -->
@@ -59,7 +54,8 @@
  ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="../../dist/js/bootstrap.min.js"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 
