Added description field, changed amount field to type number

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -2,23 +2,30 @@
     <strong>700 €</strong>
 </div>
 
-<div class="input-group input-group-lg">
+<div class="form-group">
+    <div class="input-group input-group-lg">
 
-    <input type="text" class="form-control">
-    <span class="input-group-addon">€</span>
+        <input type="number" name="amount" class="form-control" placeholder="Betrag">
+        <span class="input-group-addon">€</span>
 
-    <div class="input-group-btn ">
-        <button type="button" class="btn btn-default"><span class="glyphicon glyphicon glyphicon-minus"></span></button>
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-            <span class="caret"></span>
-            <span class="sr-only">Toggle Dropdown</span>
-        </button>
-        <ul class="dropdown-menu" role="menu">
-            <li><a href="#"><span class="glyphicon glyphicon glyphicon-minus"></span> Ausgabe</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon glyphicon-plus"></span> Einnahme</a></li>
-        </ul>
+
+        <div class="input-group-btn ">
+            <button type="button" class="btn btn-default"><span class="glyphicon glyphicon glyphicon-minus"></span>
+            </button>
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                <span class="caret"></span>
+                <span class="sr-only">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu" role="menu">
+                <li><a href="#"><span class="glyphicon glyphicon glyphicon-minus"></span> Ausgabe</a></li>
+                <li><a href="#"><span class="glyphicon glyphicon glyphicon-plus"></span> Einnahme</a></li>
+            </ul>
+        </div>
+
     </div>
+    <input type="text" name="description" class="form-control input-lg" placeholder="Beschreibung">
 </div>
+
 
 <table class="table table-striped">
     <thead>
