--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,55 +1,58 @@
-<div class="well">
-    <strong>700 €</strong>
-</div>
+<div data-ng-controller="View1Ctrl">
 
-<div class="form-group">
-    <div class="input-group input-group-lg">
-
-        <input type="number" name="amount" class="form-control" placeholder="Betrag">
-        <span class="input-group-addon">€</span>
-
-
-        <div class="input-group-btn ">
-            <button type="button" class="btn btn-default"><span class="glyphicon glyphicon glyphicon-minus"></span>
-            </button>
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                <span class="caret"></span>
-                <span class="sr-only">Toggle Dropdown</span>
-            </button>
-            <ul class="dropdown-menu" role="menu">
-                <li><a href="#"><span class="glyphicon glyphicon glyphicon-minus"></span> Ausgabe</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon glyphicon-plus"></span> Einnahme</a></li>
-            </ul>
-        </div>
-
+    <div class="well">
+        <strong><span data-ng-bind="budget"></span> €</strong>
     </div>
-    <input type="text" name="description" class="form-control input-lg" placeholder="Beschreibung">
+
+    <div class="form-group">
+        <div class="input-group input-group-lg">
+
+            <input type="number" name="amount" data-ng-model="amount" class="form-control" placeholder="Betrag">
+            <span class="input-group-addon">€</span>
+
+
+            <div class="input-group-btn ">
+                <button type="button" class="btn btn-default" data-ng-click="addTransaction();"><span class="glyphicon glyphicon glyphicon-minus"></span>
+                </button>
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                    <span class="caret"></span>
+                    <span class="sr-only">Toggle Dropdown</span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="#"><span class="glyphicon glyphicon glyphicon-minus"></span> Ausgabe</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon glyphicon-plus"></span> Einnahme</a></li>
+                </ul>
+            </div>
+
+        </div>
+        <input type="text" name="description" class="form-control input-lg" placeholder="Beschreibung">
+    </div>
+
+
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>Betrag</th>
+            <th>Datum</th>
+            <th>Beschreibung</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>- 10 €</td>
+            <td>01.10.2014</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>+ 20 €</td>
+            <td>01.10.2014</td>
+            <td>Geschenk</td>
+        </tr>
+        <tr>
+            <td>- 40,53 €</td>
+            <td>30.09.2014</td>
+            <td>Einkauf</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
-
-
-<table class="table table-striped">
-    <thead>
-    <tr>
-        <th>Betrag</th>
-        <th>Datum</th>
-        <th>Beschreibung</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>- 10 €</td>
-        <td>01.10.2014</td>
-        <td></td>
-    </tr>
-    <tr>
-        <td>+ 20 €</td>
-        <td>01.10.2014</td>
-        <td>Geschenk</td>
-    </tr>
-    <tr>
-        <td>- 40,53 €</td>
-        <td>30.09.2014</td>
-        <td>Einkauf</td>
-    </tr>
-    </tbody>
-</table>
