--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -25,7 +25,7 @@
             </div>
 
         </div>
-        <input type="text" name="description" class="form-control input-lg" placeholder="Beschreibung">
+        <input type="text" name="description" data-ng-model="description" class="form-control input-lg" placeholder="Beschreibung">
     </div>
 
 
@@ -38,20 +38,10 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>- 10 €</td>
-            <td>01.10.2014</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>+ 20 €</td>
-            <td>01.10.2014</td>
-            <td>Geschenk</td>
-        </tr>
-        <tr>
-            <td>- 40,53 €</td>
-            <td>30.09.2014</td>
-            <td>Einkauf</td>
+        <tr data-ng-repeat="transaction in transactions">
+            <td>{{ transaction.amount }} €</td>
+            <td>{{ transaction.date | date:'dd.MM.yyyy HH:mm'}}</td>
+            <td>{{ transaction.description }}</td>
         </tr>
         </tbody>
     </table>
