--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,4 +1,4 @@
-<div data-ng-controller="View1Ctrl">
+<div data-ng-controller="BudgetCtrl">
 
     <div class="well">
         <strong><span data-ng-bind="budget"></span> €</strong>
