--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
           </div>
           <div class="menu collapse navbar-collapse">
               <ul class="nav navbar-nav">
-                  <li class="active"><a href="#/view1">Monatsbudget</a></li>
+                  <li class="active"><a href="#/budget">Monatsbudget</a></li>
               </ul>
           </div><!--/.nav-collapse -->
       </div>
