--- a/app/view1/budget.html
+++ b/app/view1/budget.html
@@ -1,6 +1,6 @@
 <div data-ng-controller="BudgetCtrl">
 
-    <div class="well">
+    <div id="budget" class="well">
         <strong><span data-ng-bind="budget"></span> €</strong>
     </div>
 
